# CampusQA

./: .gitignore  README.md  pyproject.toml  start.bat  start.ps1
.sisyphus/: boulder.json
.sisyphus/plans/: rag-improvements.md
ai_service/: config.py  hw_validation.json  main.py  requirements.txt
ai_service/data/: faiss.index  metadata.json
ai_service/engine/: artifact_store.py  bm25_retriever.py  citation.py  fusion.py  loader.py  pipeline.py  prompts.py  reranker.py  retriever.py
ai_service/tests/: conftest.py  test_rejection.py
backend/: alembic.ini  init_db.sql  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_alembic.py  test_artifact.py  test_auth.py  test_bm25.py  test_calibration.py  test_citation.py  test_config.py  test_docs.py  test_document_state.py  test_eval_metrics.py  test_fusion.py  test_ingestion.py  test_prompts.py  test_rejection.py  test_reranker.py  test_root.py
evals/: baseline_results.json  calibrate.py  calibration_report.json  campus_qa.jsonl  eval_metrics.py  generate_evals.py  run_baseline.py  run_eval.py  threshold_recommendations.json
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  types.ts
knowledge_docs/academic/: 关于做好2021-2022学年本科毕业设计（论文）中期检查及学术不端检测工作的通知.md  关于公布2022年河海大学本科优秀毕业设计（论文）培育计划立项名单的通知.md  关于公布2022年河海大学本科实践教学改革研究项目中期检查结果的通知.md  关于公布首批校级产教融合型品牌专业建设名单的通知.md  关于开展2021年度校级虚拟仿真实验教学一流课程中期检查的通知.md  关于开展2022年校级产教融合型品牌专业建设申报工作的通知.md  关于开展2022年河海大学本科实践教学改革研究项目中期检查的通知.md  (+1 more)
(+32 files in other folders)
